--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="language_indonesian">Bahasa Indonesia</string>
     <string name="language_chinese">中文</string>
     <string name="language_japanese">日本語</string>
+    <string name="language_russian">Русский</string>
     <string name="language_system">System Default</string>
     
     <!-- Menu -->
