feat: Revise graphics settings UI and functionality
- Disabled resource shrinking and minification in debug build type for easier debugging.
- Removed the setupRecyclerView method and integrated backup display functionality into a new showBackupsSheet method.
- Updated fragment layout to enhance visual fidelity sections, including performance, visual effects, and display settings.
- Added new sections in strings.xml for better organization of graphics settings descriptions.
- Updated bottom navigation menu icons for improved clarity and consistency.

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -36,6 +36,18 @@
     <string name="unity_master_quality_desc">Kontrol kualitas bawaan game. Set ke Custom (0) untuk pakai Extended Settings</string>
     <string name="presets">Preset Cepat</string>
     <string name="presets_desc">Isi cepat extended settings (Low → Ultra). Ini melebihi batas game!</string>
+    <string name="section_performance">Performa &amp; stabilitas</string>
+    <string name="section_performance_desc">Atur FPS, sinkronisasi, dan scaling supaya tetap mulus.</string>
+    <string name="section_visual_fidelity">Kualitas visual</string>
+    <string name="section_visual_fidelity_desc">Atur kejernihan untuk resolusi, pencahayaan, dan refleksi.</string>
+    <string name="section_effects">Efek &amp; post-processing</string>
+    <string name="section_effects_desc">Percantik efek, bloom, anti-aliasing, dan bayangan sendiri.</string>
+    <string name="section_upscaling">Upscaling &amp; transparansi</string>
+    <string name="section_upscaling_desc">Seimbangkan performa lewat MetalFX/DLSS serta transparansi.</string>
+    <string name="section_display">Partikel &amp; tampilan</string>
+    <string name="section_display_desc">Atur kelancaran trail dan pantau status tampilan.</string>
+    <string name="section_launch">Optimasi buka game</string>
+    <string name="section_launch_desc">Pengaturan startup supaya aplikasi buka lebih cepat.</string>
     <string name="preset_low">Rendah</string>
     <string name="preset_medium">Sedang</string>
     <string name="preset_high">Tinggi</string>
