--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,18 @@
     <string name="unity_master_quality_desc">Controls game\'s built-in quality. Set to Custom (0) to use Extended Settings below</string>
     <string name="presets">Quick Presets</string>
     <string name="presets_desc">Quick-fill extended settings (Low → Ultra). These exceed game\'s limits!</string>
+    <string name="section_performance">Performance &amp; stability</string>
+    <string name="section_performance_desc">Tune FPS, sync, and scaling for a smooth, steady experience.</string>
+    <string name="section_visual_fidelity">Visual fidelity</string>
+    <string name="section_visual_fidelity_desc">Control clarity for resolution, lighting, and reflections.</string>
+    <string name="section_effects">Effects &amp; post-processing</string>
+    <string name="section_effects_desc">Polish particles, bloom, anti-aliasing, and self shadows.</string>
+    <string name="section_upscaling">Upscaling &amp; transparency</string>
+    <string name="section_upscaling_desc">Balance performance using MetalFX/DLSS and transparency tweaks.</string>
+    <string name="section_display">Particles &amp; display</string>
+    <string name="section_display_desc">Adjust trail smoothness and review active display settings.</string>
+    <string name="section_launch">Launch optimization</string>
+    <string name="section_launch_desc">Startup tweaks to open the game faster.</string>
     <string name="preset_low">Low</string>
     <string name="preset_medium">Medium</string>
     <string name="preset_high">High</string>
